[package]
name = "sec_labo2"
version = "0.1.0"
authors = ["kurisukun <barroshenriques.chris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.25.3"
structopt = "0.3.21"
lazy_static = "1.4.0"
regex = "1.5.4"
zxcvbn = "2"