[package]
name = "sec_labo2"
version = "0.1.0"
authors = ["kurisukun <barroshenriques.chris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.25.3"
structopt = "0.3.21"
lazy_static = "1.4.0"
regex = "1.5.4"
strum = "0.20.0"
strum_macros = "0.20"
zxcvbn = "2"
rust-argon2 = "0.5"
rand = "0.5.0"
google-authenticator = "0.2.1"
read_input = "0.8.4"
lettre = "0.10.0-beta.3"
uuid = { version = "0.8", features = ["serde", "v4"] }